fix: update layout overflow property for improved scrolling behavior refactor: enhance ToyList component structure and styling for better readability

--- a/src/assets/style/base/layout.css
+++ b/src/assets/style/base/layout.css
@@ -2,7 +2,7 @@ html,
 body {
     background-color: #11111e;
     height: 100vh;
-    overflow: hidden;
+    overflow: auto;
     font-size: 16px;
 }
 
